# pyRT_DISORT

./: .gitignore  Aerosol.py  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  Layer.py  MANIFEST.in  Map.py  Observation.py  README.md  README.rst  _config.yml  aerosol.py  atmosphere.py  ci_test.py  example.py  layer.py  notes.txt  observation.py  output.py  path.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  todo.txt  utilities.py
.github/: PULL_REQUEST_TEMPLATE.md
Unsorted/: model_atmosphere.py  vertical_profiles.py
aux/: albedo_map.npy  altitude_map.npy  dust.npy  solar_spectrum.csv  solar_spectrum.npy
builddocs/: conf.py  index.html  index.rst  new-users-guide.rst  notes.md  notes.rst  rayleigh.rst  vertical_profile.rst
data/: __init__.py  get_data.py
deal_with_later/: installation_todo.txt  instructions.txt  make_tar_package.py  notes.txt  old_functions.py  using_f2py.md
disort4.0.98/: BDREF.f  DISOBRDF.f  DISORT.f  changelog.txt  code.f  disort_vars.mod  disotest.f90  run_disort_unit_tests.sh
disort4.0.99/: BDREF.f  DISOBRDF.f  DISORT.f  README_pyRT_DISORT.txt
doc/: make_documentation.py  notes.txt  sphinxhtml.tar.xz
docs/: .buildinfo  _config.yml  conf.py  controller.html  eos.html  flux.html  genindex.html  index.html  index.rst  magic_notes.txt  new-users-guide.html  notes.html  notes.md  objects.inv  observation.html  phase_function.html  py-modindex.html  rayleigh.html  search.html  searchindex.js  surface.html  vertical_profile.html
docs_source/: conf.py  index.rst  notes.rst
examples/: column.py  example.py  example_1d_phsfn.py  example_3d_phsfn.py  example_hg.py  forward_scat_update.py  iuvs.py  iuvs1.py  junk.py  newColumn.py  using_text_files.py
generic/: aerosol.py  aerosol_column.py  atmosphere.py  boundary_conditions.py  control.py  model_atmosphere.py  observation.py  output.py  phase_function.py  size.py
install/: make_distribution.py
new_examples/: forward_scat_update.py  gaussian.py  scratch.py
outofdateexamples/: column.py  example_1d_phsfn.py  example_3d_phsfn.py  example_hg.py  fit_legendre.py  iuvs.py  iuvs1.py  using_text_files.py
preprocessing/: observation.py
pyRT_DISORT/: __init__.py  aerosol.py  atmosphere.py  boundary_conditions.py  controller.py  eos.py  flux.py  forward_scattering.py  legendre.py  model_atmosphere.py  modelsetup.py  modsetup.py  observation.py  optical_depth.py  output.py  path.py  phase_function.py  radiation.py  rayleigh.py  surface.py  vertical_profile.py
pyrt/: __init__.py  aerosol.py  angles.py  atmosphere.py  column.py  eos.py  forward_scattering.py  grid.py  legendre.py  output.py  (+7 more)
(+818 files in other folders)
