[metadata]
name = pyRT_DISORT
version = 1.0.0
author = kconnour
home_page = https://github.com/kconnour/pyRT_DISORT
description = Make radiative transfer more accessible to the yearning masses

[options]
include_package_data = True
python_requires = >= 3.9
packages = pyrt
install_requires =
   numpy
   scipy

[options.extras_require]
dev =
   Sphinx
   matplotlib
   pylint
   pytest
   pydata-sphinx-theme

[options.package_data]
* = ../*.so